--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -6,6 +6,10 @@
   <title>LeadBaseAI | Dashboard</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="../icons/180-180.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../icons/32-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../icons/16-16.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="../icons/192-192.png">
 </head>
 <body>
   <div class="dashboard-container">
