--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="icons/180-180.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="icons/32-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="icons/16-16.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="icons/192-192.png">
 </head>
 
 <body>
@@ -26,6 +30,7 @@
 
   <header>
     <h1>LeadBaseAI</h1>
+
     <nav>
       <a href="#features">Features</a>
       <a href="#how">How It Works</a>
@@ -43,7 +48,7 @@
   </section>
 
   <section class="features" id="features">
-    <h3>Features That Spark Growth</h3>
+    <h3><h3>Features Designed to Help You Grow</h3></h3>
     <div class="grid">
       <div class="card">
         <h4>Smart Limits</h4>
@@ -72,7 +77,7 @@
 
   <section class="cta-section" id="get-started">
     <h3>Join 10,000+ Digital Pros</h3>
-    <p>LeadSparkAI is the fastest way to extract and use leads from social platforms. No setup. No waiting.</p>
+    <p>LeadBaseAI is the fastest way to extract and use leads from social platforms. No setup. No waiting.</p>
     <a href="./login/index.html" class="cta"><span>Start for Free</span></a>
   </section>
 
