--- a/quiz/index.html
+++ b/quiz/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Verification Quiz</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="apple-touch-icon" sizes="180x180" href="../icons/180-180.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../icons/32-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../icons/16-16.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="../icons/192-192.png">
 </head>
 <body>
   <div class="quiz-popup">
@@ -16,6 +20,6 @@
     <button id="nextBtn" disabled>Next</button>
   </div>
 
-  <script src="quiz.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
