--- a/login/index.html
+++ b/login/index.html
@@ -24,6 +24,6 @@
     </div>
   </div>
   <script src="https://apis.google.com/js/api.js"></script>
-  <script src="login/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
