--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ document.addEventListener('DOMContentLoaded', () => {
       <h2>Unlock Verified Leads in One Click</h2>
       <p>Access our comprehensive database of verified business contacts and decision-makers from top social platforms.
       </p>
-      <a href="./login/index.html" class="cta">Get Started Now</a>
+      <a href="../login/index.html" class="cta">Get Started Now</a>
     </div>
   </section>
 
@@ -99,7 +99,7 @@ document.addEventListener('DOMContentLoaded', () => {
   <section class="cta-section" id="get-started">
     <h3>Join 10,000+ Digital Pros</h3>
     <p>LeadBaseAI is the fastest way to extract and use leads from social platforms. No setup. No waiting.</p>
-    <a href="./login/index.html" class="cta"><span>Start for Free</span></a>
+    <a href="../login/index.html" class="cta"><span>Start for Free</span></a>
   </section>
 
   <footer class="modern-footer">
