--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -42,7 +42,7 @@
       <p id="error-message" style="display: none; color: red;"></p>
     </main>
   </div>
-  <script src="Dashboard/script.js"></script>
+  <script src="script.js"></script>
   <footer class="modern-footer">
     <div class="footer-content">
       <p>&copy; 2025 LeadSparkAI. All rights reserved.</p>
