fixed loading screen

--- a/login/index.html
+++ b/login/index.html
@@ -21,6 +21,9 @@
         <button type="submit">Start Verification</button>
       </form>
       <p id="error-message" class="error-message"></p>
+      <div class="loading-overlay" id="loadingOverlay">
+        <div class="spinner"></div>
+      </div>
     </div>
   </div>
   <script src="https://apis.google.com/js/api.js"></script>
