--- a/quiz/index.html
+++ b/quiz/index.html
@@ -18,6 +18,9 @@
       <div id="options"></div>
     </div>
     <button id="nextBtn" disabled>Next</button>
+    <div class="loading-overlay" id="loadingOverlay">
+      <div class="spinner"></div>
+    </div>
   </div>
 
   <script src="script.js"></script>
