--- a/Data/index.html
+++ b/Data/index.html
@@ -66,6 +66,7 @@
       </div>
     </main>
   </div>
+  <script src="https://unpkg.com/xlsx/dist/xlsx.full.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
