fixed sidebar in affiliate tab

--- a/Data/index.html
+++ b/Data/index.html
@@ -62,6 +62,7 @@
           <span id="pageInfo">Page 1</span>
           <button id="nextPage">Next ⟩</button>
         </div>
+        <button id="backToCountries" class="back-button" style="display: none;">Back to Countries</button>
         <button id="downloadBtn">Download Selected</button>
       </div>
     </main>
