--- a/Data/index.html
+++ b/Data/index.html
@@ -68,6 +68,6 @@
     </main>
   </div>
   <script src="https://unpkg.com/xlsx/dist/xlsx.full.min.js"></script>
-  <script type="module" src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
