--- a/login/index.html
+++ b/login/index.html
@@ -27,6 +27,6 @@
     </div>
   </div>
   <script src="https://apis.google.com/js/api.js"></script>
-  <script type="module" src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
