updated indexed db

--- a/Affiliate/index.html
+++ b/Affiliate/index.html
@@ -32,12 +32,26 @@
     </div>
   </div>
 
-  <script>
+  <script type="module">
+    import { getUserLimits, clearAllData } from "../utils/indexedDB.js";
+
     document.getElementById("generateBtn").addEventListener("click", async () => {
-      const ip = await (await fetch("https://api64.ipify.org?format=json")).json();
-      const sanitizedIP = ip.ip.replace(/\./g, ""); // remove dots
-      const link = `https://leadbaseai.in/login.html?referal=${sanitizedIP}`;
+      const userData = await getUserLimits();
+      if (!userData?.email || !userData?.ip) {
+        alert("Please log in again to access your affiliate link.");
+        window.location.href = "../index.html";
+        return;
+      }
+
+      const encoded = encodeURIComponent(userData.email);
+      const link = `https://leadbaseai.in/login.html?affiliate=${encoded}`;
       document.getElementById("refLink").value = link;
+    });
+
+    document.getElementById("logoutLink").addEventListener("click", async (e) => {
+      e.preventDefault();
+      await clearAllData();
+      window.location.href = "../index.html";
     });
   </script>
 </body>
