again fixed indexed db

--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LeadBaseAI | Dashboard</title>
   <link rel="stylesheet" href="style.css">
+  <script type="module" src="script.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="apple-touch-icon" sizes="180x180" href="../icons/180-180.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../icons/32-32.png">
@@ -42,7 +43,6 @@
       <p id="error-message" style="display: none; color: red;"></p>
     </main>
   </div>
-  <script src="script.js"></script>
   <footer class="modern-footer">
     <div class="footer-content">
       <p>&copy; 2025 LeadSparkAI. All rights reserved.</p>
