--- a/login/index.html
+++ b/login/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login | LeadBaseAI</title>
   <link rel="stylesheet" href="style.css" />
+  <script type="module" src="script.js"></script>
   <link rel="apple-touch-icon" sizes="180x180" href="../icons/180-180.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../icons/32-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="../icons/16-16.png">
@@ -27,6 +28,5 @@
     </div>
   </div>
   <script src="https://apis.google.com/js/api.js"></script>
-  <script src="script.js"></script>
 </body>
 </html>
