--- a/quiz/index.html
+++ b/quiz/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Verification Quiz</title>
   <link rel="stylesheet" href="style.css" />
-  <script type="module" src="script.js"></script>
+  <script type="module" src="script.js?v=1"></script>
   <link rel="apple-touch-icon" sizes="180x180" href="../icons/180-180.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../icons/32-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="../icons/16-16.png">
