fixed table render issue

--- a/Data/index.html
+++ b/Data/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="../icons/16-16.png">
   <link rel="icon" type="image/png" sizes="192x192" href="../icons/192-192.png">
 </head>
+
 <body>
 
   <!-- ✅ Green Notification Banner -->
@@ -34,9 +36,17 @@
     }
 
     @keyframes fadeOut {
-      0%   { opacity: 0; }
-      50%  { opacity: 1; }
-      100% { opacity: 0; }
+      0% {
+        opacity: 0;
+      }
+
+      50% {
+        opacity: 1;
+      }
+
+      100% {
+        opacity: 0;
+      }
     }
   </style>
 
@@ -72,6 +82,7 @@
               <thead>
                 <tr>
                   <th>Select</th>
+                  <th>ID</th>
                   <th>Name</th>
                   <th>Phone</th>
                   <th>Email</th>
@@ -79,6 +90,7 @@
                   <th>Facebook Link</th>
                 </tr>
               </thead>
+
               <tbody></tbody>
             </table>
           </div>
@@ -98,4 +110,5 @@
   </div>
 
 </body>
+
 </html>
