fixed table render issue

--- a/Data/index.html
+++ b/Data/index.html
@@ -104,7 +104,7 @@
           <button id="nextPage">Next ⟩</button>
         </div>
         <button id="downloadBtn">Download Selected</button>
-        <button id="backToCountries" id="prevPage" style="display: none;">⬅ Back to Countries</button>
+        <button id="pagination-controls button" style="display: none;">⬅ Back to Countries</button>
       </div>
     </main>
   </div>
