fixed table render issue

--- a/Data/index.html
+++ b/Data/index.html
@@ -104,7 +104,7 @@
           <button id="nextPage">Next ⟩</button>
         </div>
         <button id="downloadBtn">Download Selected</button>
-        <button style="background-color: linear-gradient(135deg, #00b4ff 0%, #007bff 100%); color: #ffffff;">⬅ Back to Countries</button>
+        <button style="background: linear-gradient(135deg, #00b4ff 0%, #007bff 100%); color: #ffffff;">⬅ Back to Countries</button>
       </div>
     </main>
   </div>
