added welcome message

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ document.addEventListener('DOMContentLoaded', () => {
   <section class="hero">
     <div class="container">
       <h2>Unlock Verified Leads in One Click</h2>
-      <p>Access our comprehensive database of verified business contacts and decision-makers from top social platforms.
+      <p>Join our Affiliate and get extra 30 limit per new signup. Maintain daily streak of using website for 5 every days and get extra 50 Limits.
       </p>
       <a href="../login/index.html" class="cta">Get Started Now</a>
     </div>
